tests-integration/fixtures/checking/1772564940_derive_ord_1/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
Id :: forall (@a :: Type). (a :: Type) -> Id (a :: Type)
Wrap ::
  forall (t :: Type) (@f :: (t :: Type) -> Type) (@a :: (t :: Type)).
    (f :: (t :: Type) -> Type) (a :: (t :: Type)) ->
    Wrap @(t :: Type) (f :: (t :: Type) -> Type) (a :: (t :: Type))
Compose ::
  forall (t :: Type) (t1 :: Type) (@f :: (t :: Type) -> Type) (@g :: (t1 :: Type) -> (t :: Type))
    (@a :: (t1 :: Type)).
    (f :: (t :: Type) -> Type) ((g :: (t1 :: Type) -> (t :: Type)) (a :: (t1 :: Type))) ->
    Compose @(t :: Type) @(t1 :: Type)
      (f :: (t :: Type) -> Type)
      (g :: (t1 :: Type) -> (t :: Type))
      (a :: (t1 :: Type))
NoOrd :: forall (@a :: Type). (a :: Type) -> NoOrd (a :: Type)

Types
Id :: Type -> Type
Wrap :: forall (t :: Type). ((t :: Type) -> Type) -> (t :: Type) -> Type
Compose ::
  forall (t :: Type) (t1 :: Type).
    ((t :: Type) -> Type) -> ((t1 :: Type) -> (t :: Type)) -> (t1 :: Type) -> Type
NoOrd :: Type -> Type

Derived
derive forall (t :: Type). Eq (t :: Type) => Eq (Id (t :: Type))
derive Eq1 Id
derive forall (t :: Type). Ord (t :: Type) => Ord (Id (t :: Type))
derive Ord1 Id
derive forall (t :: Type -> Type) (t1 :: Type).
  Eq1 (t :: Type -> Type) => Eq (t1 :: Type) => Eq (Wrap @Type (t :: Type -> Type) (t1 :: Type))
derive forall (t :: Type -> Type). Eq1 (t :: Type -> Type) => Eq1 (Wrap @Type (t :: Type -> Type))
derive forall (t :: Type -> Type) (t1 :: Type).
  Ord1 (t :: Type -> Type) => Ord (t1 :: Type) => Ord (Wrap @Type (t :: Type -> Type) (t1 :: Type))
derive forall (t :: Type -> Type). Ord1 (t :: Type -> Type) => Ord1 (Wrap @Type (t :: Type -> Type))
derive forall (t :: Type -> Type) (t1 :: Type) (t2 :: (t1 :: Type) -> Type) (t3 :: (t1 :: Type)).
  Eq1 (t :: Type -> Type) =>
  Eq ((t2 :: (t1 :: Type) -> Type) (t3 :: (t1 :: Type))) =>
  Eq
    (Compose @Type @(t1 :: Type)
      (t :: Type -> Type)
      (t2 :: (t1 :: Type) -> Type)
      (t3 :: (t1 :: Type)))
derive forall (t :: Type -> Type) (t1 :: Type) (t2 :: (t1 :: Type) -> Type) (t3 :: (t1 :: Type)).
  Ord1 (t :: Type -> Type) =>
  Ord ((t2 :: (t1 :: Type) -> Type) (t3 :: (t1 :: Type))) =>
  Ord
    (Compose @Type @(t1 :: Type)
      (t :: Type -> Type)
      (t2 :: (t1 :: Type) -> Type)
      (t3 :: (t1 :: Type)))
derive forall (t :: Type -> Type) (t1 :: Type -> Type).
  Eq1 (t :: Type -> Type) => Eq1 (Compose @Type @Type (t :: Type -> Type) (t1 :: Type -> Type))
derive forall (t :: Type -> Type) (t1 :: Type -> Type).
  Ord1 (t :: Type -> Type) => Ord1 (Compose @Type @Type (t :: Type -> Type) (t1 :: Type -> Type))
derive forall (t :: Type). Eq (t :: Type) => Eq (NoOrd (t :: Type))
derive Eq1 NoOrd
derive Ord1 NoOrd

Roles
Id = [Representational]
Wrap = [Representational, Nominal]
Compose = [Representational, Representational, Nominal]
NoOrd = [Representational]

Diagnostics
error[NoInstanceFound]: No instance found for: Eq ((t :: Type -> Type) (t1 :: Type))
  --> 25:1..25:43
   |
25 | derive instance Eq1 f => Eq1 (Compose f g)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  trivia: Eq1 (t2 :: Type -> Type) is in scope
  trivia: Eq (t1 :: Type) is in scope
error[NoInstanceFound]: No instance found for: Ord ((t3 :: Type -> Type) (t4 :: Type))
  --> 26:1..26:45
   |
26 | derive instance Ord1 f => Ord1 (Compose f g)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  trivia: Ord1 (t5 :: Type -> Type) is in scope
  trivia: Ord (t4 :: Type) is in scope
  trivia: Eq1 (t5 :: Type -> Type) is in scope
  trivia: Eq (t4 :: Type) is in scope
error[NoInstanceFound]: No instance found for: Ord (NoOrd (t6 :: Type))
  --> 32:1..32:27
   |
32 | derive instance Ord1 NoOrd
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~
  trivia: Ord (t6 :: Type) is in scope
  trivia: Eq (t6 :: Type) is in scope
